--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: public-holidays-by-country
 
   datasource:
-    url: jdbc:h2:mem:public-holidays
+    url: jdbc:h2:mem:public-holidays;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:org/springframework/batch/core/schema-h2.sql'
     driver-class-name: org.h2.Driver
     username: sa
     password:
